force-app/main/default/objects/Case_Picklist_Mapping__c/Case_Picklist_Mapping__c.object-meta.xml
<CustomObject>
    <label>Case Picklist Mapping</label>
    <nameField>
        <displayFormat>PM-{00000000}</displayFormat>
        <label>Case Picklist Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Picklist Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>