force-app/main/default/objects/Case_Picklist_Mapping__c/fields/Alleged_Issue__c.field-meta.xml
<CustomField>
    <fullName>Alleged_Issue__c</fullName>
    <label>Alleged Issue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>