force-app/main/default/objects/Case_Picklist_Mapping__c/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <label>Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>