force-app/main/default/objects/Case_Picklist_Mapping__c/fields/Feedback_Detail__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Detail__c</fullName>
    <label>Feedback Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>