force-app/main/default/objects/Case_Picklist_Mapping__c/fields/Feedback_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Mapping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Feedback Mapping</label>
    <type>Checkbox</type>
</CustomField>