force-app/main/default/objects/Case_Picklist_Mapping__c/fields/Feedback_Reason__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Reason__c</fullName>
    <label>Feedback Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>