force-app/main/default/objects/Case_Picklist_Mapping__c/fields/Feedback_SubReason__c.field-meta.xml
<CustomField>
    <fullName>Feedback_SubReason__c</fullName>
    <label>Feedback SubReason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>