force-app/main/default/objects/Case_Picklist_Mapping__c/fields/Feedback_Type__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Type__c</fullName>
    <label>Feedback Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>