force-app/main/default/objects/Case_Picklist_Mapping__c/fields/Sub_Detail__c.field-meta.xml
<CustomField>
    <fullName>Sub_Detail__c</fullName>
    <label>Sub Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>