force-app/main/default/objects/Case_Picklist_Mapping__c/fields/Warranty_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Mapping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Warranty Mapping</label>
    <type>Checkbox</type>
</CustomField>