force-app/main/default/objects/Case_Picklist_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Brand__c</columns>
    <columns>Product_Category__c</columns>
    <columns>Feedback_Type__c</columns>
    <columns>Feedback_Reason__c</columns>
    <columns>Feedback_SubReason__c</columns>
    <columns>Feedback_Detail__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>